fix: bug button on safari

--- a/src/component/App.css
+++ b/src/component/App.css
@@ -14,6 +14,7 @@ input{
 }
 
 button{
+  color: white;
   padding: 11px 20px;
   border-radius: 8px;
   border: none;
